--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,32 @@
 {
-  "manifest_version": 3,
-  "name": "Siffrin Nod",
-  "version": "5.0",
-  "description": "Press Z to zone out and speed up videos, release Z to stop and return to normal. also works on ads!",
-  "permissions": ["activeTab"],
-  "host_permissions": ["<all_urls>"],
-  "background": {
-      "service_worker": "background.js"
-  },
-  "content_scripts": [
-      {
-          "matches": ["<all_urls>"],
-          "js": ["content.js"],
-          "run_at": "document_idle"
-      }
-  ],
-  "web_accessible_resources": [
-      {
-          "resources": ["siffrinnod.gif"],
-          "matches": ["<all_urls>"]
-      }
-  ],
-  "icons": {
-      "16": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
-  },
-  "action": {
-      "default_popup": "popup.html"
-  }
+    "manifest_version": 3,
+    "name": "Siffrin Nod",
+    "version": "6.0",
+    "description": "Press Z to zone out and speed up videos, release Z to stop and return to normal. also works on ads!",
+    "permissions": ["activeTab"],
+    "host_permissions": ["<all_urls>"],
+    "background": {
+        "service_worker": "background.js"
+    },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["content.js"],
+            "run_at": "document_idle"
+        }
+    ],
+    "web_accessible_resources": [
+        {
+            "resources": ["siffrinnod.gif"],
+            "matches": ["<all_urls>"]
+        }
+    ],
+    "icons": {
+        "16": "siffrinnod.gif",
+        "48": "siffrinnod.gif",
+        "128": "siffrinnod.gif"
+    },
+    "action": {
+        "default_popup": "popup.html"
+    }
 }
