--- a/manifest.json
+++ b/manifest.json
@@ -22,9 +22,9 @@
         }
     ],
     "icons": {
-        "16": "siffrinnod.gif",
-        "48": "siffrinnod.gif",
-        "128": "siffrinnod.gif"
+        "16": "icon.png",
+        "48": "icon.png",
+        "128": "icon.png"
     },
     "action": {
         "default_popup": "popup.html"
